# cmake-template

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  asan.supp  lsan.supp  main.cpp
cmake/: CPM.cmake  Compiler.cmake  Dependencies.cmake
include/cmake-template/: error.h  header.h
src/: error.h  main.cpp  source.cpp
test/: CMakeLists.txt  UnitTest.cmake  main.cpp
tests/: CMakeLists.txt  main.cpp
